# compass-and-straightedge

./: .gitignore  CMakeLists.txt  README.org  flake.nix
.github/workflows/: linux-build.yml
lib/font-awesome/: CMakeLists.txt
lib/gl/: .gitignore  CMakeLists.txt  gl.h
lib/gl-imgui/: CMakeLists.txt  gl-imgui.h  imgui-renderer.cpp  imgui-renderer.h  ui-window.cpp  ui-window.h
lib/gl/extensions/renderer/: renderer-handler-window.cpp  renderer-handler-window.h  renderer.cpp  renderer.h
lib/gl/extensions/simple-drawer/: axes.h  drawing-manager.cpp  drawing-manager.h  pixel-drawing-manager.h  rect.h  simple-drawing-renderer.h  simple-window.h
lib/gl/extensions/storage/: vec-layout.h  vertex-layout.cpp  vertex-layout.h  vertex-vector-array.h
lib/gl/math/: CMakeLists.txt  colored-vertex.h  math-utils.h  matrix.h  output.out  vec.cpp  vec.h
lib/gl/wrappers/objects/: uniforms.cpp  uniforms.h  vertex-array.cpp  vertex-array.h  vertex-buffer.cpp  vertex-buffer.h
lib/gl/wrappers/proxy/: CMakeLists.txt  opengl-error-handler.cpp  opengl-error-handler.h  opengl-wrapper.h.m4  stdlib.m4
lib/gl/wrappers/setup/: opengl-setup.cpp  opengl-setup.h  resource-loader.h
lib/imgui/: CMakeLists.txt
res/: circle.glsl  gradient.glsl  mandelbrot-single-precision.glsl  mandelbrot.glsl  uniform-color.glsl
src/: CMakeLists.txt  circle.cpp  circle.h  compass-and-straightedge.cpp  intersection-map.h  line.cpp  line.h  shape.h  tool.h
src/dependent-shapes/: dependent-shape.h
src/shapes/: line.cpp  line.h  point.h  shape.h
